Avoid too large combobox when content contains lot of characters. Avoid browser to move to top when opening metadata view (which may not be on top of page).
git-svn-id: https://geonetwork.svn.sourceforge.net/svnroot/geonetwork/trunk@8316 ff403467-3f20-0410-99e5-ff581e626a08

--- a/web-client/src/main/resources/apps/css/gnmetadatadefault.css
+++ b/web-client/src/main/resources/apps/css/gnmetadatadefault.css
@@ -166,7 +166,7 @@ label + span {
 }
 
 .metadata * select {
-  max-width : 60%
+  max-width : 200px
 }
 
 .metadata * input.error,
